# OpenCryptoCommunication

./: .gitignore  README.md  beneficiary2liquid.py  live_aes.py  live_asset_metadata.json  live_asset_notarize_planetmint.py  live_base36.py  live_confidential_masukomi.py  live_create_mnemonic.py  live_derive_keys.py  live_derive_planetmint_keys.py  live_ipld_asset.py  live_issue2liquid_testnet.py  live_key2dotcode.py  live_key2nfc.py  live_lorawan_eui.py  live_pos_printer.py  live_psbt.py  live_pycose_decrypt.py  live_pycose_encrypt.py  live_pyserial.py  live_pyserial_2.py  live_pyserial_async.py  live_pyserial_async_2.py  live_register2liquid_testnet.py  live_show_masterkey.py  live_show_masterkey_2.py  live_single_anyonecanpay.py  live_ui_attest2liquid_testnet.py  live_ui_create_mnemonic.py  live_ui_register2liquid_testnet.py  live_ui_well_known.py  live_well_known.py  occAES.py  occAsyncio.py  occAsyncioServer.py  occAsyncioUDPServer.py  occAttestMnemonic.py  occCBOR_test.py  occCRC32.py  (+14 more)
occ_connector/: occ_core.py  occ_slip.py  occ_slip_connect.py  util.py
